--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Roboto";
+
+  src: url("/fonts/roboto.woff") format("woff"), url("/fonts/robotobold.woff") format("woff"), url("/fonts/robotomedium.woff") format("woff");
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -5,7 +11,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
-  font-family: "Roboto", "Arial", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #ffffff;
   text-transform: none;
 
@@ -22,12 +28,43 @@ body {
   clip: rect(0 0 0 0);
 }
 
-a {
-  text-decoration: underline;
+.site-navigation a,
+.user-navigation a {
+  color: #ffffff;
+  text-decoration: none;
 }
+.site-navigation-list {
+  display: none;
+}
+.site-navigation-submenu {
+  display: none;
+}
+
+.site-navigation {
+  position: relative;
+}
+.site-navigation-list {
+  position: absolute;
+  top: 110%;
+
+  padding: 5px;
+}
+ul .site-navigation:hover .site-navigation-list {
+  display: block;
+
+  color: #000000;
+}
+
+
+ul .site-navigation-current:hover .site-navigation-submenu {
+  display: block;
+}
+
+
 .main-header {
   display: flex;
 }
+
 .main-navigation {
   font-weight: 700;
   font-size: 16px;
@@ -37,13 +74,16 @@ a {
 
   background-color: #849d8f;
 }
+
 .site-navigation,
 .user-navigation {
   display: flex;
 }
+
 .site-navigation {
   list-style: none;
 }
+
 .site-navigation li {
   padding: 10px;
 
@@ -55,11 +95,8 @@ a {
   font-size: 14px;
   line-height: 16px;
 }
-.site-navigation a,
-.user-navigation a {
-  color: #ffffff;
-  text-decoration: none;
-}
+
+
 .login-link,
 .header-btn-basket {
   width: 100px;
@@ -68,29 +105,37 @@ a {
   background-color: #9db1a5;
   border-radius: 20%;
 }
+
 .header-btn-basket-full {
   padding: 10px;
 
-  color: black;
+  color: #000000;
 
   background-color: #f7f6f3;
   border-radius: 20%;
 }
+
 .btn-basket-text {
-  color: black;
+  color: #000000;
 }
 
 .user-navigation-login {
   font-size: 13px;
   line-height: 24px;
-  color: black;
+  color: #000000;
 
   background-color: #f8f7f4;
   border-radius: 15px;
 }
-.user-navigation-links a {
-  color: black;
+.user-navigation-login input,
+fieldset {
+  border-color: transparent;
 }
+
+.user-navigation-links a {
+  color: #000000;
+}
+
 .slider-current a {
   width: 283px;
   padding: 19px 39px 19px;
@@ -101,8 +146,9 @@ a {
   background-color: #f16542;
   border-radius: 70px;
 }
-.deals a {
-  width: 165px;
+
+.deals-button {
+  width: 163px;
   padding: 19px 39px 19px;
 
   color: #ffffff;
@@ -118,54 +164,42 @@ a {
   color: #ffffff;
   text-decoration: none;
 }
+
 /* HOVER */
-.site-navigation a:hover,
-.site-navigation a:focus {
+.site-navigation a:hover {
+  color: #000000;
+}
+
+
+.site-navigation li:hover,
+.site-navigation li:focus {
   padding: 10px;
 
-  color: #333333;
+  color: #000000;
 
   background-color: #f7f6f3;
   border-radius: 10px;
 }
 
-.site-navigation-list a:hover
-.site-navigation-list a:focus {
-  width: 143;
 
-  color: #333333;
-
-  background-color: #fbded7;
-  border-radius: 3px;
-}
 .site-navigation-list a:active {
   color: #333333;
 
   background-color: #f6b5a5;
   border-radius: 3px;
 }
+
 .user-navigation a:hover {
   color: #333333;
 
   background-color: #f7f6f3;
   border-radius: 10px;
 }
-.site-navigation-submenu a:hover {
-  color: black;
 
-  background-color: #fbded7;
-  border-radius: 3px;
-}
-.site-navigation-submenu {
-  width: 144px;
 
-  background-color: #f8f7f4;
-}
 .site-navigation-submenu a {
-  width: 144px;
-
   font-weight: 400;
-  color: black;
+  color: #000000;
 }
 
 .button-enter {
@@ -185,17 +219,20 @@ a {
 .offers-item {
   list-style: none;
 }
+
 .offers a {
   font-weight: 700;
   font-size: 16px;
   line-height: 22px;
   color: #ffffff;
 }
+
 .offers-list h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
 }
+
 .offers-list span {
   font-weight: 700;
   font-size: 34px;
@@ -216,22 +253,24 @@ a {
   background-color: #f16642;
   border-radius: 10px;
 }
+
 .slider-current {
   text-align: center;
 }
 
-
 .slide-title {
   font-weight: 700;
   font-size: 60px;
-  line-height: 60,35px;
+  line-height: 60, 35px;
 }
-.deals h3 a {
+
+.deals h3 {
   font-weight: 700;
   font-size: 35px;
   line-height: 41px;
-  text-align: left;
+  /* text-align: left; */
 }
+
 .deals p {
   padding: 20px;
 
@@ -240,42 +279,44 @@ a {
   line-height: 22px;
   text-align: left;
 }
-.deals-item-1 {
+
+
+
+.deals-item-raspberry {
   width: 560px;
-  height: 229px;
-}
-.deals-item-2 {
-  width: 560px;
-  height: 229px;
-}
-.deals-item-1 {
   margin-left: 27px;
 
   background-color: #a03472;
   background-image: url("../img/deals-1.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 20px;
 }
-.deals-item-2 {
+
+.deals-item-chocolate {
+  width: 560px;
   margin-left: 27px;
 
   background-color: #553017;
   background-image: url("../img/deals-2.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 20px;
 }
+
 .offers-item img {
   border-radius: 50%;
 }
+
 .deals {
   display: flex;
   margin-top: 42px;
   margin-bottom: 42px;
 }
+
 .popular-offers a {
   color: #ffffff;
 }
-
 
 .features {
   width: 1146px;
@@ -295,13 +336,14 @@ a {
   margin-top: 42px;
   margin-bottom: 42px;
 }
+
 .news {
   width: 560px;
   height: 224px;
   margin-left: 27px;
   padding: 20px;
 
-  color: black;
+  color: #000000;
 
   background-color: #ffffff;
   background-image: url("../img/blog-background.jpg");
@@ -309,10 +351,11 @@ a {
   background-size: cover;
   border-radius: 20px;
 }
+
 .news a {
   font-size: 24px;
   line-height: 30px;
-  color: black;
+  color: #000000;
 }
 
 .subscription-form {
@@ -321,7 +364,7 @@ a {
   margin-left: 27px;
   padding: 20px;
 
-  color: black;
+  color: #000000;
 
   background-color: #ffffff;
   background-image: url("../img/subscription-background.svg");
@@ -329,23 +372,28 @@ a {
   background-size: cover;
   border-radius: 20px;
 }
+
 .address {
   width: 304px;
-  height: 305px ;
+  height: 305px;
 
-  color: black;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #000000;
 
   background-color: #fffffe;
   border-radius: 15px;
 }
 
-b:nth-child(1),
-b:nth-child(3),
-b:nth-child(5) {
+.address-details:nth-child(2),
+.address-details:nth-child(3),
+.address-details:nth-child(5) {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
 }
+
 .button-feedback {
   width: 251px;
   padding: 10px;
@@ -357,10 +405,12 @@ b:nth-child(5) {
   background-color: #ef6140;
   border-radius: 70px;
 }
+
 .main-footer ul {
   list-style: none;
   font-weight: 400;
 }
+
 .footer-links-list a {
   font-weight: 400;
   color: #ffffff;
@@ -371,8 +421,36 @@ b:nth-child(5) {
   line-height: 18px;
   color: #ffffff;
 }
-/* стилизую каталог */
 
+.modal-feedback {
+  width: 498px;
+
+  color: #000000;
+
+  background-color: #f8f7f4;
+  border-radius: 15px;
+}
+.feedback-input {
+  box-sizing: border-box;
+
+  background-color: #ffffff;
+  border-color: transparent;
+  border-radius: 10px;
+}
+.feedback-btn {
+  width: 144px;
+  margin-top: 50px;
+  padding: 10px;
+
+  font-size: 18px;
+  color: #ffffff;
+  text-decoration: none;
+
+  background-color: #e84d36;
+  border-radius: 70px;
+}
+
+/* стилизую каталог */
 
 .breadcrumbs {
   display: flex;
@@ -382,6 +460,7 @@ b:nth-child(5) {
   line-height: 16px;
   color: #ffffff;
 }
+
 .breadcrumbs a {
   padding: 22px;
 
@@ -394,16 +473,19 @@ b:nth-child(5) {
 
   list-style: none;
 }
+
 .pagination a {
   text-decoration: none;
 }
+
 .pagination-item-disabled a {
   color: #97aca0;
 }
 
-.pagination li {
+.pagination-item {
   padding: 20px;
 }
+
 .pagination a:hover {
   width: 30px;
   padding: 5px 10px 5px;
@@ -413,6 +495,7 @@ b:nth-child(5) {
   background-color: #9db1a5;
   border-radius: 50%;
 }
+
 .pagination-item-current a {
   width: 30px;
   padding: 5px 10px 5px;
@@ -426,12 +509,13 @@ b:nth-child(5) {
 .basket-item:not(:last-child) {
   font-size: 13px;
   line-height: 16px;
-  color: black;
+  color: #000000;
 }
+
 .basket-item:last-child {
   font-size: 15px;
   line-height: 18px;
-  color: black;
+  color: #000000;
 }
 
 .complete-btn {
@@ -446,19 +530,22 @@ b:nth-child(5) {
   background-color: #e84d36;
   border-radius: 70px;
 }
+
 .basket-list {
   width: 560px;
   margin-top: 50px;
 
-  color: black;
+  color: #000000;
 
   background-color: #f8f7f4;
   border-radius: 10px;
 }
+
 .filters h1 {
   font-size: 35px;
   line-height: 41px;
 }
+
 .filters {
   width: 863px;
 }
@@ -471,16 +558,19 @@ fieldset:nth-child(4) {
   line-height: 16px;
   color: #ffffff;
 }
+
 .topping-filter label {
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
 }
+
 .filter option {
   font-size: 14px;
   line-height: 16px;
 }
+
 .filter-btn {
   padding: 10px;
 
