--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,10 @@ body {
   background-position: top center;
   background-size: 1200px auto;
 }
+
 .site-wrapper,
 .catalog-wrapper {
-  width: 1200px;
+  min-width: 1200px;
   margin: 0 auto;
 }
 
@@ -83,8 +84,6 @@ a {
   background-color: #f6b5a5;
 }
 
-
-
 .btn-basket-text-full {
   font-weight: 500;
   font-size: 14px;
@@ -92,10 +91,10 @@ a {
   color: #000000;
 }
 
-
 .site-navigation-list {
   display: none;
 }
+
 .site-navigation-submenu {
   position: absolute;
   top: 100%;
@@ -107,24 +106,26 @@ a {
 .site-navigation {
   position: relative;
 }
+
 .site-navigation-list {
   position: absolute;
   top: 100%;
 
   padding: 5px;
 }
+
 .site-navigation-sub:hover .site-navigation-list {
   display: block;
 
   background-color: #f8f7f4;
 }
 
-
 .site-navigation-list a {
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
-  color: #000000;;
+  color: #000000;
+  ;
 }
 
 .site-navigation-current:hover .site-navigation-submenu {
@@ -132,7 +133,6 @@ a {
 
   background-color: #f8f7f4;
 }
-
 
 .main-navigation {
   font-weight: 700;
@@ -159,11 +159,10 @@ a {
   line-height: 16px;
 }
 
-
 .login-link {
   display: inline-block;
   width: 100px;
-  padding: 10px  20px;
+  padding: 10px 20px;
 
   background-color: #9db1a5;
   border-radius: 15px;
@@ -172,13 +171,13 @@ a {
 .header-btn-basket {
   display: inline-block;
   width: 100px;
-  padding: 10px  20px;
+  padding: 10px 20px;
 
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
 
-  background-color: #9db1a5 ;
+  background-color: #9db1a5;
   border-radius: 15px;
 }
 
@@ -192,7 +191,6 @@ a {
   border-radius: 10px;
 }
 
-
 .user-navigation-login {
   display: none;
 
@@ -203,6 +201,7 @@ a {
   background-color: #f8f7f4;
   border-radius: 15px;
 }
+
 .user-navigation-login input,
 fieldset {
   border: none;
@@ -223,13 +222,10 @@ fieldset {
   border-radius: 70px;
 }
 
-
-
 .slider-button:hover,
 .deals-button:hover {
   background-color: #f48468;
 }
-
 
 .deals-button {
   display: inline-block;
@@ -249,8 +245,6 @@ fieldset {
   color: #ffffff;
   text-decoration: none;
 }
-
-
 
 .site-navigation-submenu a {
   font-weight: 400;
@@ -272,37 +266,31 @@ fieldset {
   border-radius: 70px;
 }
 
-
 .offers-item {
   list-style: none;
 }
 
+.offers-title {
+  display: block;
+  margin-top: 20px;
 
-
-.offers-list h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
+  text-align: center;
   color: #ffffff;
+  /* border-bottom: 1px solid rgba(255,255,255,0.2); */
 }
 
+.offers-title a {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
 
 .offers-list span {
   font-weight: 700;
   font-size: 34px;
   line-height: 45px;
 }
-.offers-title {
-  display: inline;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 22px;
-
-  border-bottom: 1px solid rgba(255,255,255,0.2);
-  /* text-decoration: none; */
-}
-
 
 .offers-btn {
   display: inline-block;
@@ -344,8 +332,6 @@ fieldset {
   text-align: left;
 }
 
-
-
 .deals-item-raspberry {
   width: 560px;
   margin-right: 26px;
@@ -370,12 +356,14 @@ fieldset {
 .offers-item img {
   border-radius: 50%;
 }
+
 .item-price {
   font-weight: 700;
   font-size: 45px;
   line-height: 45px;
   color: #ffffff;
 }
+
 .item-weight {
   font-weight: 700;
   font-size: 30px;
@@ -383,7 +371,8 @@ fieldset {
   color: #ffffff;
 }
 
-.popular-offers a {
+.popular-offers a,
+.offers a {
   color: #ffffff;
 }
 
@@ -397,8 +386,6 @@ fieldset {
   background-image: url("../img/waffel.jpg");
   border-radius: 20px;
 }
-
-
 
 .news a {
   font-weight: 700;
@@ -418,14 +405,11 @@ fieldset {
   border-radius: 10px;
 }
 
-
-
 .news-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
 }
-
 
 .news {
   box-sizing: border-box;
@@ -496,8 +480,6 @@ fieldset {
   border-radius: 70px;
 }
 
-
-
 .main-footer ul {
   list-style: none;
   font-weight: 400;
@@ -513,14 +495,20 @@ fieldset {
   color: #ffbc9e;
 }
 
+.offers-title a:hover,
+.offers-title a:active {
+  color: #ffbc9e;
+}
+
 .footer-information-list a {
   font-size: 13px;
   line-height: 18px;
   color: #ffffff;
 }
+
 .footer-copyright {
   font-size: 12px;
-  line-height: 16px;
+  line-height: 18px;
   color: #ffffff;
 }
 
@@ -532,11 +520,13 @@ fieldset {
   background-color: #f8f7f4;
   border-radius: 15px;
 }
+
 .feedback-input {
   background-color: #ffffff;
   border-color: transparent;
   border-radius: 10px;
 }
+
 .feedback-btn {
   display: inline-block;
   width: 144px;
@@ -553,6 +543,7 @@ fieldset {
 }
 
 /* стилизую каталог */
+
 .basket-container {
   display: none;
 }
@@ -578,7 +569,6 @@ fieldset {
   color: #ffbc9e;
 }
 
-
 .pagination {
   display: flex;
   justify-content: flex-end;
@@ -597,8 +587,6 @@ fieldset {
 }
 
 .pagination-item {
-  padding: 10px;
-
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
@@ -624,8 +612,6 @@ fieldset {
   background-color: #ffffff;
   border-radius: 50%;
 }
-
-
 
 .basket-item {
   font-size: 13px;
@@ -663,7 +649,8 @@ fieldset {
 }
 
 .basket-item-price {
-  color: #999999;;
+  color: #999999;
+  ;
 }
 
 .filters h1 {
@@ -696,7 +683,6 @@ fieldset:nth-child(4) {
   line-height: 16px;
 }
 
-
 .filter-btn {
   width: 150px;
 
@@ -709,14 +695,17 @@ fieldset:nth-child(4) {
   border: 2px solid #ffffff;
   border-radius: 50px;
 }
+
 .filter-btn:hover {
   color: #000000;
 
-  background-color: #fbfcfb;;
+  background-color: #fbfcfb;
 }
+
 .filter-btn:active {
   background-color: #eaeaea;
 }
+
 .button-left {
   width: 40px;
 
@@ -726,16 +715,15 @@ fieldset:nth-child(4) {
 
 /* -----------сеточные стили----------------- */
 
-
 .main-header {
   display: flex;
   justify-content: space-between;
-  width: 1146px;
-  min-width: 149px;
+  width: 1200px;
   margin: 0 auto;
 
   outline: 1px solid red;
 }
+
 .site-navigation {
   display: flex;
   margin: 0;
@@ -744,6 +732,7 @@ fieldset:nth-child(4) {
 
   outline: 1px solid green;
 }
+
 .user-navigation {
   display: flex;
   margin: 0;
@@ -752,8 +741,6 @@ fieldset:nth-child(4) {
 
   outline: 1px solid greenyellow;
 }
-
-
 
 .deals {
   display: flex;
@@ -785,6 +772,7 @@ fieldset:nth-child(4) {
 .offers-item {
   width: 267px;
 }
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -797,20 +785,68 @@ fieldset:nth-child(4) {
 
   outline: 1px solid #a03472;
 }
+
 .main-footer {
   display: flex;
   justify-content: space-between;
+  width: 1200px;
+  margin: 0 auto;
 
   outline: 1px solid greenyellow;
 }
+
 .map {
   width: 100%;
   height: 100%;
 
   outline: 1px solid #ffe4c4;
 }
+
 .filter {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.social-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.social-item {
+  margin-right: 11px;
+}
+
+.footer-information-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 331px;
+  margin: 0;
+  padding: 0;
+}
+
+.doc-item {
+  margin-right: 25px;
+
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.for-suppliers {
+  font-weight: 700;
+}
+
+.made-in > a {
+  color: #ffffff;
+}
+
+.catalog-list-item-price {
+  display: block;
+  margin: -66px 0 0;
+
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 45px;
+  text-shadow: 1px 1px 3px rgba(49, 50, 53, 0.5);
 }
