--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 16px;
   line-height: 22px;
   font-family: "Roboto", sans-serif;
-  color: #ffffff; 
+  color: #ffffff;
   text-transform: none;
 
   background-color: #849d8f;
@@ -80,6 +80,8 @@ a {
   background-color: #fbded7;
 }
 
+
+
 .site-navigation-submenu a:active {
   background-color: #f6b5a5;
 }
@@ -106,7 +108,11 @@ a {
 .site-navigation {
   position: relative;
 }
+.site-navigation-sub > a {
+  display: inline-block;
 
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
 .site-navigation-list {
   position: absolute;
   top: 100%;
@@ -212,31 +218,54 @@ fieldset {
 }
 
 .slider-button {
-  width: 280px;
-  padding: 20px;
+  display: inline-block;
+  padding: 12px 44px;
 
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
   color: #ffffff;
   text-decoration: none;
+  text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
 
-  background-color: #f16542;
-  border-radius: 70px;
+  background-image: linear-gradient(#f16743, #e74b36);
+  border-radius: 33px;
+  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
 }
 
 .slider-button:hover,
-.deals-button:hover {
-  background-color: #f48468;
+.deals-button:hover,
+.button-feedback:hover,
+.button-submit:hover {
+  background: linear-gradient(#f58669, #ec6f5e);
+  box-shadow: 0 2px 2px 0 #ac1000;
 }
+
+.slider-button:active,
+.deals-button:active,
+.button-feedback:active,
+.button-submit:hover {
+  background: linear-gradient(#d84632, #e1613e);
+  box-shadow: inset 0 2px 2px 0 #ac1000;
+}
+
+
 
 .deals-button {
   display: inline-block;
-  width: 163px;
-  padding: 19px 39px 19px;
+  padding: 9px 24px 12px 22px;
 
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
   color: #ffffff;
   text-decoration: none;
+  text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
 
-  background-color: #f16542;
+  background-image: linear-gradient(#f16743, #e74b36);
+  border-radius: 22px;
   border-radius: 70px;
+  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
 }
 
 .page-header-info a {
@@ -269,6 +298,29 @@ fieldset {
 .offers-item {
   list-style: none;
 }
+.offers-item:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  width: 61px;
+  height: 61px;
+
+  background-image: url(../img/hit.svg);
+}
+.item-weight::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 30px;
+  height: 33px;
+
+  background-image: url(../img/ruble.svg);
+}
 
 .offers-title {
   display: block;
@@ -279,7 +331,6 @@ fieldset {
   line-height: 22px;
   text-align: center;
   color: #ffffff;
-  /* border-bottom: 1px solid rgba(255,255,255,0.2); */
 }
 
 .offers-title a {
@@ -294,18 +345,36 @@ fieldset {
 
 .offers-btn {
   display: inline-block;
-  width: 194px;
-  padding: 14px 22px;
+  padding: 14px 17px;
 
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
+  font-family: "Roboto", "Arial", sans-serif;
+  text-align: center;
   color: #ffffff;
   text-decoration: none;
+  text-shadow: 0 2px 5px #a0200b;
 
-  background-color: #f16642;
-  border-radius: 10px;
+  background-image: linear-gradient(#f26843, #e74b36);
+  border-radius: 50px;
+  box-shadow: 0 2px 2px 0 #9e4334;;
 }
+.offers-btn:hover {
+  background: linear-gradient(#f58669, #ec6f5e);
+  box-shadow: 0 2px 2px 0 #ac1000;
+}
+
+.offers-btn:active {
+  background: linear-gradient(#d84732, #e1613e);
+  box-shadow: inset 0 2px 2px 0 #ac1000;
+}
+
+
+
+
+
+
 
 .slider-current {
   text-align: center;
@@ -463,22 +532,38 @@ fieldset {
 
 .button-feedback {
   display: block;
-  width: 251px;
-  padding-top: 10px;
-  padding-right: 5px;
-  padding-bottom: 10px;
-  padding-left: 5px;
+  padding: 12px 25px;
 
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  text-align: center;
   color: #ffffff;
   text-decoration: none;
+  text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
 
-  background-color: #ef6140;
-  border-radius: 70px;
+  background-image: linear-gradient(#f16743, #e74b36);
+  border-radius: 22px;
+  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
 }
+.button-submit {
+  display: block;
+  margin-top: 50px;
+  padding: 12px 20px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 2px 2px 5px rgba(160, 32, 11, 0.76);
+
+  background-image: linear-gradient(#f16743, #e74b36);
+  border: none;
+  border-radius: 22px;
+  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
+}
+
+
 
 .main-footer ul {
   list-style: none;
@@ -527,20 +612,7 @@ fieldset {
   border-radius: 10px;
 }
 
-.feedback-btn {
-  display: inline-block;
-  width: 144px;
-  margin-top: 50px;
-  padding: 10px;
 
-  font-size: 18px;
-  color: #ffffff;
-  text-decoration: none;
-
-  background-color: #e84d36;
-  border: none;
-  border-radius: 70px;
-}
 
 /* стилизую каталог */
 
@@ -770,6 +842,8 @@ fieldset:nth-child(4) {
 }
 
 .offers-item {
+  position: relative;
+
   width: 267px;
 }
 
@@ -844,8 +918,8 @@ fieldset:nth-child(4) {
 .catalog-list-item-price {
   position: absolute;
   top: 210px;
+
   display: block;
-  
 
   font-weight: bold;
   font-size: 45px;
