--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body {
   background-size: 1200px auto;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .body-catalog {
   background-color: #849d8f;
   background-repeat: no-repeat;
@@ -73,7 +78,12 @@ a {
 }
 
 .site-navigation-current > a {
+  display: inline-block;
+  padding: 9px 14px;
+
   background-color: #d07058;
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.2); */
+  border-radius: 15px;
 }
 
 .site-navigation-submenu a:hover {
@@ -110,9 +120,12 @@ a {
 }
 .site-navigation-sub > a {
   display: inline-block;
+  padding: 9px 14px;
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.2); */
 
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 15px;
 }
+
 .site-navigation-list {
   position: absolute;
   top: 100%;
@@ -153,10 +166,15 @@ a {
 }
 
 .site-navigation li {
-  padding: 10px;
+  margin-top: 30px;
+  margin-right: 26px;
 
   list-style: none;
+  line-height: 18px;
+
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
+
 
 .user-navigation {
   list-style: none;
@@ -268,7 +286,24 @@ fieldset {
   box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
 }
 
-.page-header-info a {
+.page-header-info {
+  margin-left: auto;
+
+  text-align: right;
+  color: #ffffff;
+  text-decoration: none;
+}
+.opening-hours {
+  margin-top: 30px;
+  margin-bottom: 5px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.phone-number {
+  font-weight: 700;
   font-size: 22px;
   line-height: 24px;
   color: #ffffff;
@@ -310,21 +345,11 @@ fieldset {
 
   background-image: url(../img/hit.svg);
 }
-.item-weight::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
 
-  width: 30px;
-  height: 33px;
-
-  background-image: url(../img/ruble.svg);
-}
 
 .offers-title {
   display: block;
-  margin-top: 20px;
+  margin-top: 10px;
 
   font-weight: 500;
   font-size: 16px;
@@ -427,10 +452,14 @@ fieldset {
 }
 
 .item-price {
+  display: flex;
+  margin-top: -10px;
+  margin-bottom: 40px;
+
   font-weight: 700;
   font-size: 45px;
   line-height: 45px;
-  color: #ffffff;
+  text-shadow: 0 1px 3px rgba(49, 50, 53, 0.5);
 }
 
 .item-weight {
@@ -799,7 +828,7 @@ fieldset:nth-child(4) {
 .site-navigation {
   display: flex;
   margin: 0;
-  margin-left: 24px;
+  margin-right: 70px;
   padding: 0;
 
   outline: 1px solid green;
