--- a/css/style.css
+++ b/css/style.css
@@ -199,14 +199,21 @@ img {
 
 
 
+/* -------------------навигация по шапке---------------------- */
+.btn-basket-text-full {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #000000;
+}
+.header-btn-basket-full::before {
+  content: url("../img/basket-red.svg");
+}
 
 
-
-
-
-
-
-
+.site-navigation {
+  position: relative;
+}
 .site-navigation a,
 .user-navigation a {
   position: relative;
@@ -225,57 +232,29 @@ img {
   background-color: #f8f7f4;
 }
 
+/*
 .site-navigation-list a:hover {
   background-color: #fbded7;
 }
 
 .site-navigation-list a:active {
   background-color: #f6b5a5;
+} */
+
+/* .site-navigation-submenu a:hover {
+  background-color: #fbded7;
 }
+
+.site-navigation-submenu a:active {
+  background-color: #f6b5a5;
+} */
 
 .site-navigation-current > a {
   display: inline-block;
   padding: 9px 14px;
 
   background-color: #d07058;
-  /* border-bottom: 1px solid rgba(255, 255, 255, 0.2); */
   border-radius: 15px;
-}
-
-.site-navigation-submenu a:hover {
-  background-color: #fbded7;
-}
-
-
-
-.site-navigation-submenu a:active {
-  background-color: #f6b5a5;
-}
-
-.btn-basket-text-full {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  color: #000000;
-}
-.header-btn-basket-full::before {
-  content: url("../img/basket-red.svg");
-}
-
-.site-navigation-list {
-  display: none;
-}
-
-.site-navigation-submenu {
-  position: absolute;
-  top: 100%;
-
-  display: none;
-  padding: 5px;
-}
-
-.site-navigation {
-  position: relative;
 }
 .site-navigation-sub > a {
   display: inline-block;
@@ -285,12 +264,51 @@ img {
   border-radius: 15px;
 }
 
+.site-navigation-submenu {
+  position: absolute;
+  top: 100%;
+  /* display: none; */
+
+  width: 145px;
+  margin: 0;
+  padding: 5px;
+  padding: 0;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+
+  background-color: #f8f7f4;
+  border-radius: 5px;
+}
+
 .site-navigation-list {
   position: absolute;
   top: 100%;
+  /* display: none; */
 
-  padding: 5px;
+  width: 145px;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+
+  background-color: #f8f7f4;
+  border-radius: 5px;
 }
+
+.site-navigation li {
+  /* margin-bottom: 17px; */
+}
+
+/* .site-navigation a {
+  display: block;
+  padding: 8px 14px;
+} */
+
 
 .site-navigation-sub:hover .site-navigation-list {
   display: block;
@@ -298,13 +316,32 @@ img {
   background-color: #f8f7f4;
 }
 
-.site-navigation-list a {
+.site-navigation-list a,
+.site-navigation-submenu a {
+  display: block;
+  padding: 9px 20px 7px;
+
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
+  text-align: start;
   color: #000000;
-  ;
 }
+.site-navigation-list-item b::after,
+.site-navigation-submenu-item b::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 6px;
+
+  width: calc(100% - 12px);
+  height: 1px;
+
+  background-color: #d1d0ce;
+}
+
+
+
 
 .site-navigation-current:hover .site-navigation-submenu {
   display: block;
@@ -323,13 +360,14 @@ img {
 }
 
 .site-navigation li {
-  margin-top: 30px;
+  z-index: 1;
+
   margin-right: 26px;
 
   list-style: none;
   line-height: 18px;
 
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  /* border-bottom: 1px solid #9db1a5; */
 }
 .options-wrapper {
   margin-top: 30px;
@@ -367,6 +405,7 @@ img {
 .login-link:active::before {
   content: url("../img/entrance-dark.svg");
 }
+
 
 
 .header-btn-search {
@@ -447,9 +486,6 @@ fieldset {
 }
 
 
-
-
-
 .page-header-info {
   margin-left: auto;
 
@@ -497,10 +533,16 @@ fieldset {
 .offers-item {
   position: relative;
 
+  display: inline-block;
   width: 267px;
+  margin-bottom: 20px;
+
+  list-style: none;
+  vertical-align: top;
+  text-align: center;
 }
 
-.offers-item:hover .catalog-preview {
+.offers-item:hover .offers-preview {
   z-index: 2;
 }
 .offers-item:hover .offers-title {
@@ -510,17 +552,37 @@ fieldset {
 .offers-item:hover:after {
   display: block;
 }
-.catalog-item:hover .offers-btn {
-  z-index: 2;
+.offers-item:hover .button-wrapper {
+  z-index: 15;
 
   display: block;
 }
-.catalog-preview {
-  position: relative;
 
-  text-align: left;
+
+.offers-preview {
+  position: relative;
 }
 
+
+
+.catalog-list-item-price {
+  position: absolute;
+  top: 210px;
+
+  display: block;
+
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 45px;
+  text-shadow: 1px 1px 3px rgba(49, 50, 53, 0.5);
+}
+.price-wrapper {
+  position: relative;
+  z-index: 1;
+}
+.price-wrapper-hit {
+  position: relative;
+}
 .offers-item::before {
   content: "";
   position: absolute;
@@ -532,60 +594,54 @@ fieldset {
 
   display: none;
 
-  background-color: rgba(255, 255, 255, 0.3);
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  background-color: #9bafa3;
+  border-radius: 3px;
+  opacity: 0.3;
 }
 .offers-item::after {
   content: "";
   position: absolute;
   top: -6px;
   right: -6px;
-  bottom: -82px;
+  bottom: -70px;
   left: -6px;
-  z-index: 1;
+  z-index: 10;
 
   display: none;
 
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.3);
-}
-/* z-index: 380;
-
-  min-width: 296px;
-  min-height: 405px;
-
-  background-color: #9bafa3;
-  border-radius: 5px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
-  opacity: 0.9; */
-
-
-
-
-
-
-
-
-
-
-.offers-item {
-  list-style: none;
 }
-.offers-item:before {
+
+.button-wrapper {
+  position: absolute;
+  right: -6px;
+  bottom: -70px;
+  left: -6px;
+  z-index: 2;
+
+  display: none;
+  padding: 20px 0;
+}
+
+
+
+.price-wrapper-hit::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 300;
 
   width: 61px;
   height: 61px;
 
-  background-image: url(../img/hit.svg);
+  background-image: url("../img/hit.svg");
 }
 
 
 .offers-title {
+  position: relative;
+
   display: block;
   margin-top: 10px;
 
@@ -599,7 +655,7 @@ fieldset {
 .offers-title a {
   text-decoration: none;
 
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid #9db1a5;
 }
 
 .offers-list span {
@@ -625,7 +681,7 @@ fieldset {
   background-image: linear-gradient(#f26843, #e74b36);
   border-radius: 50px;
   box-shadow: 0 2px 2px 0 #9e4334;
-  cursor: pointer;;
+  cursor: pointer;
 }
 .offers-btn:hover {
   background: linear-gradient(#f58669, #ec6f5e);
@@ -662,6 +718,8 @@ fieldset {
 }
 
 .deals-item-raspberry {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   min-width: 560px;
@@ -676,6 +734,8 @@ fieldset {
 }
 
 .deals-item-chocolate {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   min-width: 560px;
@@ -689,7 +749,18 @@ fieldset {
   background-size: cover;
   border-radius: 20px;
 }
+
+.offers-item img {
+  position: relative;
+
+  border-radius: 50%;
+}
+
 .deals-button {
+  position: absolute;
+  right: 22px;
+  bottom: 18px;
+
   display: block;
   margin-left: auto;
   padding: 9px 24px 12px 22px;
@@ -708,9 +779,27 @@ fieldset {
 }
 
 
-.offers-item img {
-  border-radius: 50%;
-}
+
+/* ??????????????КАРТОЧКИ?????????????? */
+
+/* .offers-item:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -13px;
+  bottom: -72px;
+  left: -13px;
+  z-index: 1;
+
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
+
+  pointer-events: none;
+} */
+
+
+
 
 .item-price {
   display: inline;
@@ -1031,6 +1120,7 @@ fieldset {
 
 .breadcrumbs {
   display: flex;
+  padding: 0;
 
   list-style: none;
   font-weight: 400;
@@ -1040,9 +1130,12 @@ fieldset {
 }
 
 .breadcrumbs a {
-  padding: 22px;
+  padding: 8px 8px 0;
 
   color: #ffffff;
+}
+.breadcrumbs-current-page {
+  padding-left: 8px;
 }
 
 .navigation-link:hover,
@@ -1306,7 +1399,7 @@ fieldset:nth-child(4) {
 .doc-item {
   margin-right: 25px;
 
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid #9db1a5;
 }
 
 .for-suppliers {
@@ -1315,19 +1408,4 @@ fieldset:nth-child(4) {
 
 .copyright a {
   color: #ffffff;
-}
-
-.catalog-list-item-price {
-  position: absolute;
-  top: 210px;
-
-  display: block;
-
-  font-weight: bold;
-  font-size: 45px;
-  line-height: 45px;
-  text-shadow: 1px 1px 3px rgba(49, 50, 53, 0.5);
-}
-.price-wrapper {
-  position: relative;
 }
